# FFClient

./: .gitignore  README.md
FFClient.Avalonia/: FFClient.Avalonia.sln
FFClient.Avalonia/FFClient.Avalonia/: FFClient.Avalonia.csproj
FFClient.Avalonia/FFClient.Avalonia.Desktop/: App.axaml  App.axaml.cs  FFClient.Avalonia.Desktop.csproj  MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs
FFClient.Avalonia/FFClient.Avalonia/Views/: FFClientControl.axaml  FFClientControl.axaml.cs
src/: CMakeLists.txt  config.h  config_components.h  decoder.h  ffclient.c  ffclient.h  frame.h  packet.h  socket.h  utils.h  video.h
src/ffclient/: CMakeLists.txt  clock.c  clock.h  decoder.c  ffclient.c  ffclient.h  frame.c  frame.h  packet.c  packet.h  utils.c  utils.h  video.c  video.h
src/ffmpeg/: CMakeLists.txt  ffmpeg.c  ffmpeg.h
src/linux/: CMakeLists.txt  main.c  socket.c
src/windows/: CMakeLists.txt  main.c  socket.c
